<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Escape 201</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string name="play_btn">Play!</string>
    <string name="settings_btn">Change Settings</string>
    <string name="level_select_btn">Level Select</string>
    <string name="level_1_btn">Level 1</string>
    <string name="level_2_btn">Level 2</string>
    <string name="level_3_btn">Level 3</string>
    <string name="title_activity_leveland_settings_screen">LevelandSettingsScreen</string>
    <string name="main_title">Escape 201</string>
    <string name="sound_effects_check">Sound Effects Enabled</string>
    <string name="music_check">Music Enabled</string>
    <string name="tips_check">Tips Enabled</string>
    <string name="title_activity_level1">Level1</string>
    <string name="title_activity_level2">Level2</string>

</resources>
