<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chris.escape201game.LevelSelectScreen"
    android:background="@drawable/multipledoorsred">

    <TextView
        android:text="@string/level_select_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/levelSelectID"
        android:textSize="35sp"
        android:focusableInTouchMode="false"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:typeface="normal"
        android:textIsSelectable="false"
        android:shadowColor="#ff000000"
        android:singleLine="false"
        android:background="#7a000000"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1_btn"
        android:id="@+id/level1BtnID"
        android:onClick="gotoLevel1Activity"
        android:layout_marginLeft="55dp"
        android:layout_alignTop="@+id/level2BtnID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_2_btn"
        android:id="@+id/level2BtnID"
        android:onClick="gotoLevel2Activity"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_3_btn"
        android:id="@+id/button2"
        android:onClick="gotoLevel3Activity"
        android:layout_marginRight="65dp"
        android:layout_alignTop="@+id/level2BtnID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
